# Energy-Languages

./: README.md  bench.sh  build_image.Dockerfile  gen-input.sh  requirements.txt
.github/workflows/: docker.yml  rapl.yml  scripts.yml
C#/binary-trees/: Makefile
C#/k-nucleotide/: Makefile
C#/n-body/: Makefile
C#/regex-redux/: Makefile
C#/spectral-norm/: Makefile
C++/binary-trees/: Makefile
C++/chameneos-redux/: Makefile
C++/k-nucleotide/: Makefile
C++/pidigits/: Makefile
C++/regex-redux/: Makefile
C++/regex-redux-re2/: regexredux.cpp
C++/spectral-norm/: Makefile
C/binary-trees/: Makefile
C/k-nucleotide/: Makefile
C/regex-redux/: Makefile
C/spectral-norm/: Makefile
CSharp/binary-trees/: Makefile
CSharp/chameneos-redux/: Makefile
CSharp/fannkuch-redux/: Makefile
CSharp/fasta/: Makefile
CSharp/k-nucleotide/: Makefile
CSharp/mandelbrot/: Makefile
CSharp/n-body/: Makefile
CSharp/pidigits/: Makefile
CSharp/regex-redux/: Makefile
CSharp/reverse-complement/: Makefile
CSharp/spectral-norm/: Makefile
CSharp/thread-ring/: Makefile
Go/binary-trees/: Makefile
Go/k-nucleotide/: Makefile
Go/mandelbrot/: Makefile
Go/spectral-norm/: Makefile
Java-N/regex-redux/: Makefile  regexredux.java
Java-N/reverse-complement/: Makefile
Java/fannkuch-redux/: Makefile
Java/mandelbrot/: Makefile
Java/spectral-norm/: Makefile
JavaScript/binary-trees/: Makefile
JavaScript/k-nucleotide/: Makefile
JavaScript/n-body/: Makefile
JavaScript/spectral-norm/: Makefile
Java_100/binary-trees/: binarytrees.java
Java_100/reverse-complement/: revcomp.java
Lua/binary-trees/: Makefile
Lua/fannkuch-redux/: Makefile
Lua/fasta/: Makefile
Lua/k-nucleotide/: Makefile
Lua/mandelbrot/: Makefile
Lua/n-body/: Makefile
Lua/pidigits/: Makefile
Lua/regex-redux/: Makefile
Lua/reverse-complement/: Makefile
Lua/spectral-norm/: Makefile
PHP/fannkuch-redux/: Makefile
PHP/k-nucleotide/: Makefile
PHP/mandelbrot/: Makefile
PHP/pidigits/: Makefile
PHP/reverse-complement/: Makefile
Python/binary-trees/: Makefile  binarytrees.py
Python/fannkuch-redux/: Makefile
Python/k-nucleotide/: Makefile
Rust/n-body/: Makefile
Rust/pidigits/: Makefile
Rust/regex-redux/: Makefile
Rust/reverse-complement/: Makefile
Rust/spectral-norm/: Makefile
TypeScript/fasta/: Makefile
TypeScript/reverse-complement/: Makefile
TypeScript/spectral-norm/: Makefile
benchmarks/C#/chameneos-redux/: Makefile
benchmarks/C#/fannkuch-redux/: Makefile
benchmarks/C#/fasta/: Makefile
benchmarks/C#/k-nucleotide/: Makefile
benchmarks/C#/mandelbrot/: Makefile
benchmarks/C#/pidigits/: Makefile
benchmarks/C#/regex-redux/: Makefile
benchmarks/C#/reverse-complement/: Makefile
benchmarks/C#/spectral-norm/: Makefile
benchmarks/C++/binary-trees/: Makefile
benchmarks/C++/chameneos-redux/: Makefile
benchmarks/C++/fannkuch-redux/: Makefile
benchmarks/C++/k-nucleotide/: Makefile
benchmarks/C++/mandelbrot/: Makefile
benchmarks/C++/n-body/: Makefile
benchmarks/C++/pidigits/: Makefile
benchmarks/C++/regex-redux/: Makefile
benchmarks/C++/reverse-complement/: Makefile
benchmarks/C/binary-trees/: Makefile
benchmarks/C/chameneos-redux/: Makefile
benchmarks/C/fannkuch-redux/: Makefile
benchmarks/C/fasta/: Makefile
benchmarks/C/k-nucleotide/: Makefile
benchmarks/C/mandelbrot/: Makefile
benchmarks/C/n-body/: Makefile
benchmarks/C/pidigits/: Makefile
benchmarks/C/regex-redux/: Makefile
benchmarks/C/reverse-complement/: Makefile
benchmarks/C/spectral-norm/: Makefile
benchmarks/Go/binary-trees/: Makefile
benchmarks/Go/fannkuch-redux/: Makefile
benchmarks/Go/fasta/: Makefile
benchmarks/Go/k-nucleotide/: Makefile
benchmarks/Go/n-body/: Makefile
benchmarks/Go/pidigits/: Makefile
benchmarks/Go/regex-redux/: Makefile
benchmarks/Go/reverse-complement/: Makefile
benchmarks/Java/binary-trees/: Makefile
benchmarks/Java/fannkuch-redux/: Makefile
benchmarks/Java/fasta/: Makefile
benchmarks/Java/n-body/: Makefile
benchmarks/Java/regex-redux/: Makefile
benchmarks/Java/reverse-complement/: Makefile
benchmarks/JavaScript/fannkuch-redux/: Makefile
benchmarks/JavaScript/fasta/: Makefile
benchmarks/JavaScript/k-nucleotide/: Makefile
benchmarks/JavaScript/mandelbrot/: Makefile
benchmarks/JavaScript/n-body/: Makefile
benchmarks/JavaScript/regex-redux/: Makefile
benchmarks/JavaScript/reverse-complement/: Makefile
benchmarks/JavaScript/spectral-norm/: Makefile
benchmarks/Lua/binary-trees/: Makefile
benchmarks/Lua/fannkuch-redux/: Makefile
benchmarks/Lua/fasta/: Makefile
benchmarks/Lua/k-nucleotide/: Makefile
benchmarks/Lua/mandelbrot/: Makefile
benchmarks/Lua/n-body/: Makefile
benchmarks/Lua/pidigits/: Makefile
benchmarks/Lua/regex-redux/: Makefile
benchmarks/Lua/reverse-complement/: Makefile
benchmarks/Lua/spectral-norm/: Makefile
benchmarks/LuaJIT/fasta/: Makefile
benchmarks/LuaJIT/k-nucleotide/: Makefile
benchmarks/TypeScript/: package.json
data/NUCN1/: idle.json
data/obelix96/: idle.json
data/osmium/: matmul-cpp.json  matmul-numpy.json
docker/: DaCapo.Dockerfile  DaCapo.patch  LangBench.Dockerfile  main.Dockerfile
experiments/C as C++/: Makefile.defaults  README.md
scripts/: average.py  average_cpu_usage.py  barchart.py  build_docker_image.py  docker-java-n.sh  dram.py  dump_tmp.py  energy-time.py  energy_time.py  fixed-time.py  fixed_time.py  idle.py  java-n.py  java_n.py  measure.py  normalize_cores.py  pyperformance.py  pyperformance_chart.py  requirements.txt  run_dacapo.py  spec_fix_files.py  table.py  time_v_energy.py  utils.py  x-as-y.py  x_as_y.py
scripts/RAPL/: .clang-format  CMakeLists.txt  README.md
scripts/RAPL/include/rapl/: benchmark.hpp  perf.hpp  rusage.hpp  utils.hpp
scripts/RAPL/src/: benchmark.cpp  cpu.cpp  idle.cpp  main.cpp  msr.cpp  perf.cpp  rapl.cpp  rusage.cpp  time-limiter.cpp
scripts/RAPL/src/benchmarks/: iteration.cpp  prediction.cpp
scripts/cpp-vs-numpy-matmul/: CMakeLists.txt  matmul.cpp  matmul.py
scripts/rapl/: rapl.cpp
(+1657 files in other folders)
